[package]
name = "fetch_reqwest"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["fetch", "request", "reqwest"]
homepage = "https://github.com/cars10/fetch_reqwest"
repository = "https://github.com/cars10/fetch_reqwest"
documentation = "https://docs.rs/fetch_reqwest"
authors = ["Carsten König <carstenkoenig92@gmail.com>"]
categories = ["web-programming::http-client"]
description = "very simple (and very incomplete) wrapper around for reqwest that mimics the javascript fetch API"

[dependencies]
log = "0.4"
multimap = "0.10"
rand = "0.8"
reqwest = {version = "0.12", features = ["rustls-tls"], default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
